# Tigriyna_BPE_Tokenizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bpe_50k.yaml
outputs/tokenizer/: tokenizer.json
scripts/: evaluate_tokenizer.py  prepare_corpus.py
src/tigrinya_tokenizer/: __init__.py  tokenizer.json  tokenizer.py
src/tigrinya_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tokenizer/: corpus.py  train_bpe.py
test/: test_tokenizer_tigrinya.py
tigrinya_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tokenizer/: normalization.py  train_bpe.py
