[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrinya-tokenizer"
version = "0.1.0"
description = "Robust Tigrinya Byte Pair Encoding tokenizer"
authors = [
  { name="Haben Eyasu", email="habifishe@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []


license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/haben-ai/Tigrinya-Tokenizer"
Issues = "https://github.com/haben-ai/Tigrinya-Tokenizer/issues"