[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrinya-tokenizer"
version = "0.1.8"
description = "Robust Tigrinya Byte-Pair Encoding tokenizer"
authors = [
  { name="Haben Eyasu", email="habifishe@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
   "tokenizers>=0.13.3",
   "PyYAML>=6.0"
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/haben-ai/Tigrinya-Tokenizer"
Issues = "https://github.com/haben-ai/Tigrinya-Tokenizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tigrinya_tokenizer = ["tokenizer.json"]